[gd_scene load_steps=8 format=3 uid="uid://dmyfhthondwr"]

[ext_resource type="Texture2D" uid="uid://b5hf2886kqgh5" path="res://Assets/Background/Radar/GreenRadar/greenRadar (16).png" id="2_mskrs"]
[ext_resource type="Script" path="res://Scripts/GameStart/CrewCreatorRoot.gd" id="2_omxda"]
[ext_resource type="Script" path="res://Scripts/GameStart/CrewmateIconSelector.gd" id="4_5gv6b"]
[ext_resource type="Texture2D" uid="uid://b1f8gka4f1pfv" path="res://Assets/Portraits/Human (1).jpg" id="4_6i5u3"]

[sub_resource type="LabelSettings" id="LabelSettings_lowye"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_hk21h"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_s50g0"]
font_size = 42

[node name="Root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_omxda")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mskrs")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Creation d'equipage"
label_settings = SubResource("LabelSettings_lowye")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Creator" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="CrewmateName" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Creator"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Creator/CrewmateName"]
layout_mode = 2
text = "Nom "
label_settings = SubResource("LabelSettings_hk21h")

[node name="LineEdit" type="LineEdit" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Creator/CrewmateName"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2

[node name="CrewmateSkill1" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Creator"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Creator/CrewmateSkill1"]
layout_mode = 2
text = "Competence 1 "
label_settings = SubResource("LabelSettings_hk21h")

[node name="Cewskill1IOption" type="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Creator/CrewmateSkill1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
allow_reselect = true

[node name="CrewmateSkill2" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Creator"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Creator/CrewmateSkill2"]
layout_mode = 2
text = "Competence 2 "
label_settings = SubResource("LabelSettings_hk21h")

[node name="Cewskill2IOption" type="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Creator/CrewmateSkill2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
allow_reselect = true

[node name="IconSelector" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Creator"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Creator/IconSelector"]
layout_mode = 2
text = "Apparence "

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Creator/IconSelector"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
script = ExtResource("4_5gv6b")

[node name="Previous" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Creator/IconSelector/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
text = "<"

[node name="IconRect" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Creator/IconSelector/HBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
texture = ExtResource("4_6i5u3")
expand_mode = 3

[node name="Next" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Creator/IconSelector/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
text = ">"

[node name="Validate" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Creator"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Creer"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.81

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Votre equipage"
label_settings = SubResource("LabelSettings_s50g0")

[node name="Crew" type="GridContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.81
theme_override_constants/h_separation = 20
columns = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1000

[node name="PreviousMenu" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Retour"

[node name="Start" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
disabled = true
text = "Suivant"

[connection signal="crewmateCreated" from="." to="." method="_on_crewmate_created"]
[connection signal="text_changed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Creator/CrewmateName/LineEdit" to="." method="_on_crewmate_name_text_changed"]
[connection signal="item_selected" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Creator/CrewmateSkill1/Cewskill1IOption" to="." method="_on_skill1_selected"]
[connection signal="item_selected" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Creator/CrewmateSkill2/Cewskill2IOption" to="." method="_on_skill2_selected"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Creator/IconSelector/HBoxContainer/Previous" to="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Creator/IconSelector/HBoxContainer" method="_on_previous_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Creator/IconSelector/HBoxContainer/Next" to="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Creator/IconSelector/HBoxContainer" method="_on_next_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Creator/Validate" to="." method="_on_validate_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/PreviousMenu" to="." method="_on_previous_menu_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/Start" to="." method="_on_start_pressed"]
